force-app/main/default/objects/Lead/fields/alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>alpha2Code__c</fullName>
    <label>Country Alpha 2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>