force-app/main/default/objects/Lead/fields/alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>alpha3Code__c</fullName>
    <label>Country Alpha 3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>