force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Country Region</label>
    <length>120</length>
    <type>Text</type>
</CustomField>