force-app/main/default/objects/Lead/validationRules/No_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Owner_Change</fullName>
    <active>true</active>
    <description>Do not allow to change owner unless Country, Lead source and No. of employees are filled</description>
    <errorConditionFormula>IF(
    ISCHANGED(OwnerId), 
    IF(
        OR($Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Contract Manager&quot;),
        IF(
            ISPICKVAL(LeadSource,&quot;&quot;),
            true,
            IF(
                AND($Profile.Name=&quot;Contract Manager&quot;,ISBLANK(TEXT(NumberOfEmployees))),
                true,
                false
            )
        ),
        IF(
            OR(ISPICKVAL(LeadSource,&quot;&quot;),ISBLANK(Country),ISBLANK(TEXT(NumberOfEmployees))),
            true,
            false
        )
    ), 
    false
)</errorConditionFormula>
    <errorMessage>Error on updating the lead, please check the required fields.</errorMessage>
</ValidationRule>